deploy/standalone/operator.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: multicloud-operators-subscription
  labels:
    name: multicloud-operators-subscription
spec:
  replicas: 1
  selector:
    matchLabels:
      name: multicloud-operators-subscription
  template:
    metadata:
      labels:
        name: multicloud-operators-subscription
    spec:
      serviceAccountName: multicloud-operators
      containers:
        - name: multicloud-operators-subscription
          image: quay.io/multicloudlab/multicloud-operators-subscription
          command:
          - /usr/local/bin/multicloud-operators-subscription
          - --sync-interval=10
          imagePullPolicy: Always
          resources:
              requests:
                cpu: 100m
                memory: 256Mi
              limits:
                cpu: 500m
                memory: 512Mi
