deploy/standalone/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    name: multicloud-operators-subscription
  name: multicloud-operators-subscription
spec:
  ports:
  - port: 8443
    protocol: TCP
    targetPort: 8443
  selector:
    name: multicloud-operators-subscription
  sessionAffinity: None
  type: ClusterIP
